so as to specify a load average limit.  If the system load average exceeds
the specified limit, B<makehistory> sleeps until it goes below the limit.

=item *

As UTF-8 is the default character set in S<RFC 3977>, C<ctlinnd pause>,
C<ctlinnd readers>, C<ctlinnd reject>, C<ctlinnd reserve>, C<ctlinnd throttle>
and C<nnrpd -r> commands now require the given reason to be encoded in UTF-8,
so that it can be properly sent to news readers.

=item *

The output of consistency checks for article storage and the F<history>
file no longer appears by default when C<cnfsstat -a> is used.  A new B<-v>
flag has been added to B<cnfsstat> so as to see it.

=item *

The default path for TLS certificates has changed from I<pathnews>/lib
to I<pathetc>.  It only affects new INN installations or generations of
certificates with C<make cert>.  Besides, a default value has been
added to I<tlscapath> because it is required by B<nnrpd> when TLS
is used.

=item *

gzip(1) is now the default UUCP batcher in B<send-uucp> instead of
compress(1) because B<gzip> is more widely available than B<compress>,
due to old patent issues.  Note that there is no impact on decompression
as it is handled by B<rnews>.

=item *

B<cnfsheadconf> now uses the Perl core module C<Math::BigInt> rather
than the deprecated F<bigint.pl> library.  When used without specifying
a CNFS buffer, it now properly displays the status of all CNFS buffers.

=back

=head1 Upgrading from 2.4 to 2.5

The following changes require your full attention because a manual intervention
may be needed:

=over 2

=item *

In order to process control messages, B<controlchan> now needs the
C<MIME::Parser> module.  Packages are available from most distributions,
or you can install the module directly from CPAN (C<MIME-tools> in
F<modules/by-module/MIME/>, for instance on ftp.perl.org).

S<Perl 5.8.0> or later is recommended for INN.  If you are using an earlier
version, you will also need the C<Encode> module for correct processing of