@@ -120,7 +120,8 @@ C<art[Newsgroups]> are faster:
 If you want to accept an article, return C<None> or an empty string.  To
 reject, return a non-empty string.  The rejection strings will be shown to
 local clients and your peers, so keep that in mind when phrasing your
-rejection responses.
+rejection responses and make sure that such a message is properly encoded
+in UTF-8 so as to comply with the NNTP protocol.
 
 =item filter_messageid(I<self>, I<msgid>)
 
@@ -366,13 +367,14 @@ I<intipaddr>, I<intport>) described below.  The return tuple now only
 contains either two or three elements, the first of which is the NNTP
 response code.  The second is an error string which is passed to the
 client if the response code indicates that the authentication attempt
-has failed.  This allows a specific error message to be generated by
-the Python script in place of the generic message C<Authentication
-failed>.  An optional third return element, if present, will be used to
-match the connection with the I<user> parameter in access groups and
-will also be the username logged.  If this element is absent, the
-username supplied by the client during authentication will be used, as
-was the previous behaviour.
+has failed (make sure that such a message is properly encoded in UTF-8
+so as to comply with the NNTP protocol).  This allows a specific error
+message to be generated by the Python script in place of the generic
+message C<Authentication failed>.  An optional third return element,
+if present, will be used to match the connection with the I<user>
+parameter in access groups and will also be the username logged.  If
+this element is absent, the username supplied by the client during
+authentication will be used, as was the previous behaviour.
 
 The I<python_access> parameter (described below) is new; it allows the
 dynamic generation of an access group of an incoming connection using
