@@ -13,7 +13,9 @@
 ##
 ##  1) NNTP response code.  Should be one of the codes from %authcodes
 ##  below to not risk violating the protocol.  
-##  2) An error string to be passed to the client.
+##  2) An error string to be passed to the client (make sure that
+##  such a message is properly encoded in UTF-8 so as to comply with the
+##  NNTP protocol).
 ##  Both elements are required.  If there is a problem, nnrpd will die
 ##  and syslog the exact error.
 
